@@ -112,6 +112,20 @@
 		        </plugin>
 			
 			<plugin>
+			      <groupId>org.apache.maven.plugins</groupId>
+			      <artifactId>maven-surefire-plugin</artifactId>
+			      <version>2.22.2</version> <!-- tu peux aussi mettre 3.0.0-M9 -->
+			      <configuration>
+			        <argLine>
+			          --add-opens java.base/java.lang=ALL-UNNAMED
+			          --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+			          --add-opens java.base/java.util=ALL-UNNAMED
+			          --add-opens java.base/java.io=ALL-UNNAMED
+			        </argLine>
+			      </configuration>
+			    </plugin>
+			
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
